Deobfuscate some packets